# app/Http/Controllers/Controller.php
@@ -6,7 +6,7 @@ namespace App\Http\Controllers;
 * @OA\Info(
 *      version="1.0.0",
 *      title="Bookstore API",
-*      description="This is the documentation for the bookstore API. The Postman Url is https://www.getpostman.com/collections/4382c3395a389aa1ebd9",
+*      description="This is the documentation for the bookstore API.",
 *      @OA\Contact(
 *          email="setty.095@gmail.com"
 *      ),
@@ -19,8 +19,18 @@ namespace App\Http\Controllers;
 * @OA\Server(
 *      url=L5_SWAGGER_CONST_HOST,
 *      description="Bookstore API"
-* )
-*/
+* )/**
+
+ * @OA\SecurityScheme(
+ *     type="http",
+ *     description="Login with email and password to get the authentication token",
+ *     name="Token bearer Based",
+ *     in="header",
+ *     scheme="bearer",
+ *     bearerFormat="JWT",
+ *     securityScheme="apiAuth",
+ * )
+ */
 
 use Illuminate\Foundation\Auth\Access\AuthorizesRequests;
 use Illuminate\Foundation\Bus\DispatchesJobs;
